# nalaf

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  Pipfile  README.md  demo.py  demo_predict.py  demo_stats.py  example_annotate.py  guidelines.md  meeting-5-30.md  nala.py  nalaf.py  pyproject.toml  setup.py  testing_ground_carsten.py
demo/output/: tmvar_reimpl_demo_predict_py_idp4_stub_results.txt  tmvar_stub_pubtator_results.txt
nala/: __init__.py  download_corpora.py  main.py  test.py
nala/bootstrapping/: DocumentFilters.py  PMIDFilters.py  __init__.py  document_filters.py  iteration.py  pmid_filters.py  utils.py
nala/data/: RegEx.NL  connecting_words.json  default_config.ini  dict_nl_words.json  nl_patterns.json
nala/features/: __init__.py  embeddings.py  parsing.py  regex.py  relations.py  simple.py  simple_extended.py  stemming.py  tmvar.py  window.py
nala/learning/: crfsuite.py  evaluators.py  postprocessing.py  selectors.py  taggers.py
nala/preprocessing/: annotators.py  (+5 more)
nalaf/: __init__.py  download_corpora.py  download_data.py
notes/: definitions-questions.md  definitions.md  guidelines.md
resources/: example.txt  regex_st.json
results/: IDP4_toplist_words.txt  performances_per_pattern.txt  ratioNL_ratioAbsFull.txt  readme.md  results_definers_shuffle.txt  results_tmVar_performance.txt  results_with_definers_shuffled_without_tp.txt  shuffled_results_02.txt
source/: RegEx.NL  main.py  regex_st.json  setup.py  test.py
tests/: test_evaluators.py  test_features.py  test_mutationFinderReader.py  test_preprocessing.py  test_structures.py
(+1313 files in other folders)
