[tool.poetry]
name = "nalaf"
version = "0.6.0-dev.1"
description = "Natural Language Framework, for NER and RE"
homepage = "https://github.com/Rostlab/nalaf"
license = "Apache License"

authors = [
  "Juan Miguel Cejuela <juanmi@tagtog.net>",
  "Aleksandar Bojchevski <aleksandar.bojchevski@gmail.com>",
  "Carsten Uhlig"
]

readme = "README.md"
keywords=["NLP", "NLU", "NER", "RE", "natural langauge", "CRF", "SVM", "entity extraction", "relation extraction"]
classifiers = [
 "Natural Language :: English",
 "Topic :: Text Processing :: Linguistic"
]

exclude = [
  "nalaf/data/*.jar",
  "nalaf/data/example_entity_model"
]


[tool.poetry.dependencies]
python = "^3.6"

#
# ML deps
#
numpy = "1.16.*"
scipy = ">= 0.18.1, < 1.3"
gensim = ">= 0.13.3, <= 0.13.4.1"  # In 1.0.0 they move .vocab: https://github.com/RaRe-Technologies/gensim/blob/master/CHANGELOG.md#100-2017-02-24
scikit-learn = ">= 0.18.1, <= 0.20.3"
spacy = "1.2.0"
python-crfsuite = ">= 0.9.3, == 0.9.*"
nltk = "3.*"

#
# Other deps
#
beautifulsoup4 = "^4.5"
requests = "^2.21"
progress = "^1.2"
hdfs = "2.5.*"
urllib3 = ">=1.20, <1.25"  # limit, due to dependency problems with botocore

[tool.poetry.dev-dependencies]
pyflakes = "2.*"
nose = "1.*"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
